# CHIPIN

./: .gitignore  animation.html  brainstorm.html  contact.html  home.html  job.html  loading.html  message.html  profile.html  urprofile.html
backend/: Cargo.toml
backend/migrations/: 001_init.sql
backend/src/: db.rs  error.rs  main.rs  models.rs
backend/src/routes/: auth.rs  mod.rs  projects.rs  rooms.rs  stats.rs  students.rs
frontend/: brainstorm.html  contact.html  home.html  index.html  job.html  loading.html  mates.html  message.html  profile.html  urprofile.html
frontend/assets/style/: shared.css
