[package]
name = "chipin-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chipin"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["json", "query"] }

# Middleware / CORS
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# SQLite (bundled = no external install needed)
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
